# yoyo-ecom

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  requirements-dev.txt  requirements.txt  setup-venv.bat  setup-venv.sh
backend/: .env.example  Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  schema.yml
backend/api/: health.py
backend/api/v1/: urls.py
backend/api/v1/accounts/: urls.py  user_urls.py
backend/api/v1/admin/: urls.py
backend/api/v1/analytics/: urls.py
backend/api/v1/carts/: urls.py
backend/api/v1/catalog/: urls.py
backend/api/v1/coupons/: urls.py
backend/api/v1/customer/: urls.py
backend/api/v1/inventory/: urls.py
backend/api/v1/notifications/: urls.py
backend/api/v1/orders/: urls.py
backend/api/v1/payments/: urls.py
backend/api/v1/public/: urls.py
backend/api/v1/returns/: urls.py
backend/api/v1/reviews/: urls.py
backend/api/v1/shipping/: urls.py
backend/api/v1/webhooks/: urls.py
backend/api/v1/wishlist/: urls.py
backend/apps/accounts/: admin.py  apps.py  constants.py  factories.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_created_at_alter_user_id.py  0003_add_user_otp.py  0004_add_is_phone_verified.py
backend/apps/accounts/models/: __init__.py  address.py  otp.py  staff_permission.py  user.py
backend/apps/accounts/selectors/: addresses.py  users.py
backend/apps/accounts/services/: addresses.py  authentication.py  phone_verification.py  staff_permissions.py  users.py
backend/apps/accounts/tests/: helpers.py  test_auth_user_api.py  test_factories.py  test_phone_verification.py  test_seed_data_command.py  test_services.py  test_user_flows.py
backend/apps/analytics/: admin.py
backend/apps/analytics/selectors/: __init__.py  summary.py
backend/apps/analytics/services/: __init__.py
backend/apps/analytics/tests/: test_selectors.py
backend/apps/carts/: admin.py  apps.py  factories.py
backend/apps/carts/migrations/: 0001_initial.py
backend/apps/carts/models/: __init__.py  cart.py  cart_item.py
backend/apps/carts/selectors/: __init__.py  carts.py
backend/apps/carts/services/: __init__.py  carts.py
backend/apps/carts/tests/: test_cart_api.py  test_cart_services.py
backend/apps/catalog/: admin.py  apps.py  constants.py  factories.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/catalog/models/: __init__.py  category.py  product.py  product_image.py  variant.py  variant_attribute.py  variant_attribute_value.py  variant_option.py
backend/apps/catalog/selectors/: products.py
backend/apps/catalog/services/: products.py  variants.py
backend/apps/common/: exceptions.py  pagination.py  permissions.py
backend/apps/common/models/: base.py  (+1 more)
backend/apps/coupons/: admin.py  apps.py  constants.py  factories.py
backend/apps/inventory/: admin.py  apps.py  constants.py  factories.py
backend/apps/notifications/: admin.py  constants.py  factories.py
backend/apps/orders/: admin.py  apps.py  constants.py  factories.py
backend/apps/payments/: admin.py  apps.py  constants.py  factories.py
backend/apps/returns/: admin.py  apps.py  constants.py  factories.py
backend/apps/reviews/: admin.py  apps.py  constants.py  factories.py
backend/apps/seed/: apps.py
backend/apps/shipping/: admin.py  apps.py  constants.py  factories.py
backend/apps/wishlist/: admin.py  apps.py  factories.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/tests/: conftest.py  test_health.py
(+229 files in other folders)
