[project]
name = "ecommerce-management-backend"
version = "0.1.0"
description = "Backend API for a single-vendor e-commerce management system."
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "djangorestframework>=3.15,<4.0",
    "djangorestframework-simplejwt>=5.3,<6.0",
    "django-cors-headers>=4.3,<5.0",
    "django-filter>=24.0",
    "dj-database-url>=2.1,<3.0",
    "drf-spectacular>=0.27,<1.0",
    "gunicorn>=22.0,<24.0",
    "psycopg[binary]>=3.1,<4.0",
    "python-decouple>=3.8,<4.0",
    "stripe>=8.0,<9.0",
    "twilio>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0,<25.0",
    "pre-commit>=3.7,<4.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "django-stubs>=5.0,<6.0",
    "djangorestframework-stubs>=3.15,<4.0",
    "factory-boy>=3.3,<4.0",
    "python-decouple-stubs>=3.8.0.1",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
mypy_path = "backend"
strict_optional = true

# Django ORM reverse relations and DRF request.user patterns
# are known limitations of mypy-django/mypy-drf plugins
[[tool.mypy.overrides]]
module = [
    "apps.accounts.selectors.*",
    "apps.accounts.services.*",
    "apps.carts.selectors.*",
    "apps.carts.services.*",
    "apps.orders.selectors.*",
    "apps.orders.services.*",
    "apps.payments.services.*",
    "apps.reviews.models.*",
    "apps.returns.services.*",
    "apps.seed.management.commands.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "api.v1.customer.*",
    "api.v1.admin.*",
    "api.v1.public.*",
    "api.v1.webhooks.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"
